Adicionado novo card de projeto

--- a/index.html
+++ b/index.html
@@ -9,19 +9,15 @@
     <meta name="author" content="Paulo Vinícius Sousa Lima">
     <title>Meu Portfólio</title>
 
-    <!-- Fontes e Estilos -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Source+Code+Pro&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script> <!-- FontAwesome para ícones -->
 </head>
 
 <body>
 
-    <!-- Cabeçalho -->
     <header class="header">
         <div class="header-content">
-            <!-- Imagem redonda ao lado do "Olá Mundo!" -->
             <div class="image-container">
                 <img src="ft.jpg" alt="Foto de Paulo Vinícius" class="profile-img">
             </div>
@@ -33,10 +29,8 @@
         </div>
     </header>
 
-    <!-- Container de conteúdo -->
     <div class="container">
 
-        <!-- Seção "Sobre Mim" -->
         <section class="about-me">
             <h2>Sobre Mim</h2>
             <p class="justificado">Sou Paulo Vinícius Sousa Lima, estudante de Engenharia de Software na Universidade
@@ -45,7 +39,6 @@
                 focado na melhoria contínua.</p>
         </section>
 
-        <!-- Seção "Projetos" -->
         <section class="projects">
             <h2>Projetos</h2>
             <div class="project-card">
@@ -60,9 +53,14 @@
                     <button class="btn">Ver o site no GitHub Pages</button>
                 </a>
             </div>
+            <div class="project-card">
+                <h3>To do list</h3>
+                <a href="https://paulo-vinicius-sousa-lima.github.io/to-do-list/" target="_blank">
+                    <button class="btn">Ver o site no GitHub Pages</button>
+                </a>
+            </div>
         </section>
 
-        <!-- Seção "Contato" -->
         <section class="contact">
             <h2>Contato</h2>
             <p>Entre em contato comigo através das minhas redes sociais ou pelo e-mail:</p>
@@ -84,11 +82,11 @@
 
     </div>
 
-    <!-- Rodapé -->
     <footer>
         <p>&copy; 2024 Paulo Vinícius Sousa Lima - Todos os direitos reservados.</p>
     </footer>
 
 </body>
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
 </html>
