Adicionado novo card de projeto

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                     <button class="btn">Ver o site no GitHub Pages</button>
                 </a>
             </div>
+            <div class="project-card">
+                <h3>Calculadora de IMC</h3>
+                <a href="https://paulo-vinicius-sousa-lima.github.io/calculadora-imc/" target="_blank">
+                    <button class="btn">Ver o site no GitHub Pages</button>
+                </a>
+            </div>
         </section>
 
         <section class="contact">
